fix: Finalização da padronização e ajustes na arquitetura do microserviço
